package(default_visibility = ["//visibility:public"])

sh_test(
    name = "lint",
    srcs = ["//scripts/bazel:lint.sh"],
    args = ["--check-only"],
)

sh_binary(
    name = "lint_fix",
    srcs = ["//scripts/bazel:lint.sh"],
)

sh_test(
    name = "rust_lint",
    srcs = ["//scripts/bazel:lint.sh"],
    args = ["--check-only", "--rust"],
)

sh_test(
    name = "cairo_lint",
    srcs = ["//scripts/bazel:lint.sh"],
    args = ["--check-only", "--cairo"],
)

sh_test(
    name = "prettier_lint",
    srcs = ["//scripts/bazel:lint.sh"],
    args = ["--check-only", "--prettier"],
)
